cancel-trx/src/main/kubernetes/4-app-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cancel-trx-deployment
  labels:
    app: cancel-trx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cancel-trx
  template:
    metadata:
      labels:
        app: cancel-trx
    spec:
      containers:
        - name: cancel-trx-container
          image: platform2.hclets.com:9876/generated-apps/cancel-trx:v1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      restartPolicy: Always
      imagePullSecrets:
      - name: cancel-trx-registry-secrets
